--- a/pages/forms.html
+++ b/pages/forms.html
@@ -17,12 +17,10 @@
             <div>
                 <label for="password">Password (input: password) : </label>
                 <input type="password" id="password" name="password">
-                <error-output class="pass-error" for="password"></error-output>
             </div>
             <div>
                 <label for="email">Email (input: email) : </label>
                 <input type="email" id="email" name="email">
-                <error-output class="email-error" for="email"></error-output>
             </div>
             <div>
                 <label for="url">URL (input: url) : </label>
@@ -35,7 +33,6 @@
             <div>
                 <label for="tel">Telephone (input: tel) : </label>
                 <input type="tel" id="tel" name="tel">
-                <error-output class="mobile-error" for="tel"></error-output>
             </div>
             <div>
                 <label for="search">Search (input: search) : </label>
@@ -43,7 +40,7 @@
             </div>
             <div>
                 <label for="datetime">Date & Time (input: datetime) : </label>
-                <input type="datetime-local" id="datetime" name="datetime">
+                <input type="datetime" id="datetime" name="datetime">
             </div>
             <div>
                 <label for="salary">Salary (input: range) : </label>
@@ -64,36 +61,6 @@
                     textError.textContent = ""
                 else
                     textError.textContent = "Name is Incorrect."
-            })
-            
-            const email = document.querySelector('#email')
-            const mailError = document.querySelector('.email-error')
-            email.addEventListener('input', function(){
-                let mailRegex = RegExp('^[a-z]+([_+-.]?[a-z0-9]+)*[@][a-z0-9]+[.]([a-z]+){2,}([.]?[a-z]{2})?$')
-                if(mailRegex.test(email.value))
-                     mailError.textContent = ""
-                else
-                    mailError.textContent = "Incorrect Email."
-            })
-
-            const mobile = document.querySelector('#tel')
-            const mobileError = document.querySelector('.mobile-error')
-            tel.addEventListener('input', function(){
-                let mobileRegex = RegExp('[0-9]{2}\\s[0-9]{10}')
-                if(mobileRegex.test(mobile.value))
-                    mobileError.textContent = ""
-                else 
-                    mobileError.textContent = "Incorrect Mobile. Please specify in 9X -XXXXXXXXXX format"
-            })
-
-            const password = document.querySelector('#password')
-            const passError = document.querySelector('.pass-error')
-            password.addEventListener('input', function(){
-                let passRegex = RegExp('^(?=.*\\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[!#@%$^=+&])(?=\\S+$).{8,}$')
-                if(passRegex.test(password.value))
-                    passError.textContent = ""
-                else 
-                    passError.textContent = "Incorrect Password."
             })
             
             const salary = document.querySelector('#salary')
