--- a/pages/forms.html
+++ b/pages/forms.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <title>Input Form</title>
-        <link rel="stylesheet" href="../css/forms.css">
+        <link rel="stylesheet" href="../css/InputForm_Css.css">
     </head>
     <body>
         <form>
@@ -21,6 +21,7 @@
             <div>
                 <label for="email">Email (input: email) : </label>
                 <input type="email" id="email" name="email">
+                <error-output class="email-error" for="email"></error-output>
             </div>
             <div>
                 <label for="url">URL (input: url) : </label>
@@ -29,6 +30,7 @@
             <div>
                 <label for="number">Number (input: number) : </label>
                 <input type="number" id="number" name="number">
+                <error-output class="mobile-error" for="number"></error-output>
             </div>
             <div>
                 <label for="tel">Telephone (input: tel) : </label>
@@ -61,6 +63,26 @@
                     textError.textContent = ""
                 else
                     textError.textContent = "Name is Incorrect."
+            })
+            
+            const email = document.querySelector('#email')
+            const mailError = document.querySelector('.email-error')
+            text.addEventListener('input', function(){
+                let mailRegex = RegExp('^[a-z]+([_+-.]?[a-z0-9]+)*[@][a-z0-9]+[.]([a-z]+){2,}([.]?[a-z]{2})?$')
+                if(mailRegex.test(email.value))
+                    textError.textContent = ""
+                else
+                    textError.textContent = "Incorrect Email."
+            })
+
+            const mobile = document.querySelector('#number')
+            const mobileError = document.querySelector('.mobile-error')
+            text.addEventListener('input', function(){
+                let mobileRegex = RegExp('[0-9]{2}\\s[0-9]{10}')
+                if(mobileRegex.test(mobile.value))
+                    mobileError.textContent = ""
+                else 
+                    mobileError.textContent = "Incorrect Mobile. Please specify in 9X -XXXXXXXXXX format"
             })
             
             const salary = document.querySelector('#salary')
