--- a/pages/forms.html
+++ b/pages/forms.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <title>Input Form</title>
-        <link rel="stylesheet" href="../css/InputForm_Css.css">
+        <link rel="stylesheet" href="../css/forms.css">
     </head>
     <body>
         <form>
@@ -17,6 +17,7 @@
             <div>
                 <label for="password">Password (input: password) : </label>
                 <input type="password" id="password" name="password">
+                <error-output class="pass-error" for="password"></error-output>
             </div>
             <div>
                 <label for="email">Email (input: email) : </label>
@@ -30,11 +31,11 @@
             <div>
                 <label for="number">Number (input: number) : </label>
                 <input type="number" id="number" name="number">
-                <error-output class="mobile-error" for="number"></error-output>
             </div>
             <div>
                 <label for="tel">Telephone (input: tel) : </label>
                 <input type="tel" id="tel" name="tel">
+                <error-output class="mobile-error" for="tel"></error-output>
             </div>
             <div>
                 <label for="search">Search (input: search) : </label>
@@ -42,7 +43,7 @@
             </div>
             <div>
                 <label for="datetime">Date & Time (input: datetime) : </label>
-                <input type="datetime" id="datetime" name="datetime">
+                <input type="datetime-local" id="datetime" name="datetime">
             </div>
             <div>
                 <label for="salary">Salary (input: range) : </label>
@@ -67,22 +68,32 @@
             
             const email = document.querySelector('#email')
             const mailError = document.querySelector('.email-error')
-            text.addEventListener('input', function(){
+            email.addEventListener('input', function(){
                 let mailRegex = RegExp('^[a-z]+([_+-.]?[a-z0-9]+)*[@][a-z0-9]+[.]([a-z]+){2,}([.]?[a-z]{2})?$')
                 if(mailRegex.test(email.value))
-                    textError.textContent = ""
+                     mailError.textContent = ""
                 else
-                    textError.textContent = "Incorrect Email."
+                    mailError.textContent = "Incorrect Email."
             })
 
-            const mobile = document.querySelector('#number')
+            const mobile = document.querySelector('#tel')
             const mobileError = document.querySelector('.mobile-error')
-            text.addEventListener('input', function(){
+            tel.addEventListener('input', function(){
                 let mobileRegex = RegExp('[0-9]{2}\\s[0-9]{10}')
                 if(mobileRegex.test(mobile.value))
                     mobileError.textContent = ""
                 else 
                     mobileError.textContent = "Incorrect Mobile. Please specify in 9X -XXXXXXXXXX format"
+            })
+
+            const password = document.querySelector('#password')
+            const passError = document.querySelector('.pass-error')
+            password.addEventListener('input', function(){
+                let passRegex = RegExp('^(?=.*\\d)(?=.*[a-z])')
+                if(passRegex.test(password.value))
+                    passError.textContent = ""
+                else 
+                    passError.textContent = "Incorrect Password."
             })
             
             const salary = document.querySelector('#salary')
